--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   just_audio: ^0.9.37
   on_audio_query: ^2.9.0
   permission_handler: ^11.0.1
+  intl: ^0.19.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
