--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   permission_handler: ^11.0.1
   intl: ^0.19.0
   shared_preferences: ^2.2.3
+  google_fonts: ^6.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
